Fixed episode tease layout issue

--- a/web/app/themes/thelegacypodcast/assets/scss/_components.scss
+++ b/web/app/themes/thelegacypodcast/assets/scss/_components.scss
@@ -19,6 +19,7 @@
 
 .episode-tease {
 	display: flex;
+	align-items: flex-start;
 	&:not(:last-child){
 		margin-bottom: $spacing;
 	}
